# reviviendo-imagenes

./: .gitignore  pyproject.toml
backend/: Dockerfile  test_replicate.py
backend/app/: main.py
backend/app/services/: replicate_service.py  supabase_service.py
frontend/: app.py
